// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`classy-ui should allow arguments to group: should allow arguments to group 1`] = `

import { group } from 'classy-ui'

group('background-color-red-600', 'background-color-red-500')

      ↓ ↓ ↓ ↓ ↓ ↓

import { addClasses as _addClasses } from 'classy-ui/runtime';
import { group } from 'classy-ui';
('group background-color-red-600 background-color-red-500');

_addClasses([]);


`;

exports[`classy-ui should allow group with conditional after it: should allow group with conditional after it 1`] = `

import { c, group } from 'classy-ui'

c(group(), { 'background-color-red-500': true })

      ↓ ↓ ↓ ↓ ↓ ↓

import { addClasses as _addClasses } from 'classy-ui/runtime';
import { c, group } from 'classy-ui';
(true ? 'background-color-red-500' : '').replace(/(?:^|\\s)(?:group)[^\\s]+/g, '') + ' group';

_addClasses(['background-color-red-500', '.background-color-red-500{background-color:#f56565;}\\n']);


`;

exports[`classy-ui should allow pseudo decorators as base: should allow pseudo decorators as base 1`] = `

import { c, hover } from 'classy-ui'

hover('background-color-red-500')

      ↓ ↓ ↓ ↓ ↓ ↓

import { addClasses as _addClasses } from 'classy-ui/runtime';
import { c, hover } from 'classy-ui';
('hover:background-color-red-500');

_addClasses(['hover:background-color-red-500', '.hover\\\\:background-color-red-500:hover{background-color:#f56565;}\\n']);


`;

exports[`classy-ui should convert both breakpoints and pseudos: should convert both breakpoints and pseudos 1`] = `

import { c, hover, md } from 'classy-ui'

c(md(hover('background-color-red-500')))

      ↓ ↓ ↓ ↓ ↓ ↓

import { addClasses as _addClasses } from 'classy-ui/runtime';
import { c, hover, md } from 'classy-ui';
('hover:md:background-color-red-500');

_addClasses([
  'hover:md:background-color-red-500',
  '@media(max-width:768px){.hover\\\\:md\\\\:background-color-red-500:hover{background-color:#f56565;}\\n}\\n',
]);


`;

exports[`classy-ui should convert breakpoints: should convert breakpoints 1`] = `

import { c, md } from 'classy-ui'

c(md('background-color-red-500'))

      ↓ ↓ ↓ ↓ ↓ ↓

import { addClasses as _addClasses } from 'classy-ui/runtime';
import { c, md } from 'classy-ui';
('md:background-color-red-500');

_addClasses([
  'md:background-color-red-500',
  '@media(max-width:768px){.md\\\\:background-color-red-500{background-color:#f56565;}\\n}\\n',
]);


`;

exports[`classy-ui should convert complex compositions: should convert complex compositions 1`] = `

import { c, hover, md, lg } from 'classy-ui'

c('background-color-red-600', md(lg(hover('background-color-red-500'))))

      ↓ ↓ ↓ ↓ ↓ ↓

import { addClasses as _addClasses } from 'classy-ui/runtime';
import { c, hover, md, lg } from 'classy-ui';
('background-color-red-600 hover:lg:md:background-color-red-500');

_addClasses([
  'background-color-red-600',
  '.background-color-red-600{background-color:#e53e3e;}\\n',
  'hover:lg:md:background-color-red-500',
  '@media(max-width:1024px){.hover\\\\:lg\\\\:md\\\\:background-color-red-500:hover{background-color:#f56565;}\\n}\\n@media(max-width:768px){.hover\\\\:lg\\\\:md\\\\:background-color-red-500:hover{background-color:#f56565;}\\n}\\n',
]);


`;

exports[`classy-ui should convert pseudos: should convert pseudos 1`] = `

import { c, hover } from 'classy-ui'

c(hover('background-color-red-500'))

      ↓ ↓ ↓ ↓ ↓ ↓

import { addClasses as _addClasses } from 'classy-ui/runtime';
import { c, hover } from 'classy-ui';
('hover:background-color-red-500');

_addClasses(['hover:background-color-red-500', '.hover\\\\:background-color-red-500:hover{background-color:#f56565;}\\n']);


`;

exports[`classy-ui should convert simple: should convert simple 1`] = `

import { c } from 'classy-ui'

c('background-color-red-500')

      ↓ ↓ ↓ ↓ ↓ ↓

import { addClasses as _addClasses } from 'classy-ui/runtime';
import { c } from 'classy-ui';
('background-color-red-500');

_addClasses(['background-color-red-500', '.background-color-red-500{background-color:#f56565;}\\n']);


`;

exports[`classy-ui should fix specifiy issue in dynamic composition: should fix specifiy issue in dynamic composition 1`] = `

import { c} from 'classy-ui'

c(compose, moreCompose, 'color-red-500', 'border-radius-sm')

      ↓ ↓ ↓ ↓ ↓ ↓

import { addClasses as _addClasses } from 'classy-ui/runtime';
import { c } from 'classy-ui';
(compose + moreCompose).replace(/(?:^|\\s)(?:color-red-|border-radius-)[^\\s]+/g, '') + ' color-red-500 border-radius-sm';

_addClasses([
  'color-red-500',
  '.color-red-500{color:#f56565;}\\n',
  'border-radius-sm',
  '.border-radius-sm{border-radius:0.125rem;}\\n',
]);


`;

exports[`classy-ui should give group a classname: should give group a classname 1`] = `

import { c, group } from 'classy-ui'

group()

      ↓ ↓ ↓ ↓ ↓ ↓

import { addClasses as _addClasses } from 'classy-ui/runtime';
import { c, group } from 'classy-ui';
('group');

_addClasses([]);


`;

exports[`classy-ui should handle complex dynamic composition: should handle complex dynamic composition 1`] = `

import { c, group } from 'classy-ui'

c(group(), { 'background-color-red-500': true }, 'color-white', { 'background-color-blue-500': true }, 'border-radius-sm')

      ↓ ↓ ↓ ↓ ↓ ↓

import { addClasses as _addClasses } from 'classy-ui/runtime';
import { c, group } from 'classy-ui';
((true ? 'background-color-red-500' : '') + (true ? 'background-color-blue-500' : '')).replace(
  /(?:^|\\s)(?:group|color-|border-radius-)[^\\s]+/g,
  '',
) + ' group color-white border-radius-sm';

_addClasses([
  'background-color-red-500',
  '.background-color-red-500{background-color:#f56565;}\\n',
  'color-white',
  '.color-white{color:#fff;}\\n',
  'background-color-blue-500',
  '.background-color-blue-500{background-color:#4299e1;}\\n',
  'border-radius-sm',
  '.border-radius-sm{border-radius:0.125rem;}\\n',
]);


`;

exports[`classy-ui should not throw when using group inside c call: should not throw when using group inside c call 1`] = `

import { c, group } from 'classy-ui'

c(group())

      ↓ ↓ ↓ ↓ ↓ ↓

import { addClasses as _addClasses } from 'classy-ui/runtime';
import { c, group } from 'classy-ui';
('group');

_addClasses([]);


`;

exports[`classy-ui should throw if group was renamed: should throw if group was renamed 1`] = `

import { c, group as g } from 'classy-ui'

c(group())

      ↓ ↓ ↓ ↓ ↓ ↓

SyntaxError: unknown: Composing variabels is only allowed with classnames()
[0m [90m 1 | [39m[36mimport[39m { c[33m,[39m group as g } from [32m'classy-ui'[39m[0m
[0m [90m 2 | [39m[0m
[0m[31m[1m>[22m[39m[90m 3 | [39mc(group())[0m
[0m [90m   | [39m  [31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[0m

`;

exports[`classy-ui should throw when nesting c call: should throw when nesting c call 1`] = `

import { c } from 'classy-ui'

c(c('background-color-red-600'))

      ↓ ↓ ↓ ↓ ↓ ↓

SyntaxError: unknown: Duplicating c is not allowed.
[0m [90m 1 | [39m[36mimport[39m { c } from [32m'classy-ui'[39m[0m
[0m [90m 2 | [39m[0m
[0m[31m[1m>[22m[39m[90m 3 | [39mc(c([32m'background-color-red-600'[39m))[0m
[0m [90m   | [39m  [31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[0m

`;
